--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -30,7 +30,6 @@ jobs:
 
       - run: yarn install --immutable
 
-      - run: echo "${{ secrets.TEST_ENV }}" | base64 -d > .env
       - run: yarn build
       - run: yarn lint
       - run: yarn test
@@ -38,10 +37,16 @@ jobs:
           TEST_SERVICE_KEY: ${{ secrets.TEST_SERVICE_KEY }}
           TEST_COLLECTOR: ${{ secrets.TEST_COLLECTOR }}
 
+      # load bearing .root file
+      # actions/upload-artifact will make the archive root the topmost directory which contains all specified files
+      # we can force it to be the root of the repo by including an empty file present at the root
+      # see https://github.com/actions/upload-artifact#upload-using-multiple-paths-and-exclusions
+      - run: touch .root
       - uses: actions/upload-artifact@v3
         with:
           name: build
           path: |
+            .root
             packages/**/dist/
             packages/bindings/npm/*/oboe.node
             packages/bindings/npm/*/liboboe-1.0.so.0
