--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -15,6 +15,7 @@
     "@opentelemetry/core": "1.8.x",
     "@opentelemetry/sdk-node": "0.34.x",
     "@opentelemetry/sdk-trace-base": "1.8.x",
+    "@opentelemetry/semantic-conventions": "1.8.x",
     "@swotel/bindings": "workspace:^"
   },
   "devDependencies": {
