--- a/scripts/package.json
+++ b/scripts/package.json
@@ -4,7 +4,8 @@
     "lint": "prettier --check . && eslint --max-warnings=0 *.js"
   },
   "dependencies": {
-    "axios": "^1.2.1"
+    "axios": "^1.2.1",
+    "bson": "^4.7.0"
   },
   "devDependencies": {
     "@swotel/eslint-config": "workspace:^",
