--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -8,7 +8,8 @@
   ],
   "scripts": {
     "build": "tsc",
-    "lint": "prettier --check . && eslint --max-warnings=0 *.js src/**"
+    "lint": "prettier --check . && eslint --max-warnings=0 *.js src/**",
+    "lint:fix": "eslint --fix *.js src/** && prettier --write ."
   },
   "dependencies": {
     "@opentelemetry/api": "1.3.x",
