--- a/packages/bindings/package.json
+++ b/packages/bindings/package.json
@@ -15,15 +15,15 @@
   },
   "devDependencies": {
     "@swotel/eslint-config": "workspace:^",
-    "@swotel/zig-build": "workspace:^",
     "@types/jest": "^29.4.1",
     "@types/node": "^14.0.0",
     "eslint": "^8.36.0",
     "jest": "^29.5.0",
-    "node-addon-api": "^5.0.0",
+    "node-addon-api": "^6.0.0",
     "prettier": "^2.8.4",
     "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "zig-build": "^0.1.1"
   },
   "optionalDependencies": {
     "@swotel/bindings-linux-arm64-gnu": "worspace:*",
