--- a/packages/bindings/npm/linux-arm64-musl/package.json
+++ b/packages/bindings/npm/linux-arm64-musl/package.json
@@ -10,7 +10,7 @@
   "main": "oboe.node",
   "files": [
     "oboe.node",
-    "liboboe-1.0.so.0"
+    "liboboe.so"
   ],
   "engines": {
     "node": ">= 14"
