--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -9,6 +9,7 @@
     "lint": "prettier --check . && eslint --max-warnings=0 *.js"
   },
   "dependencies": {
+    "@eslint/js": "^8.36.0",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "eslint-config-prettier": "^8.7.0",
