--- a/packages/merged-config/package.json
+++ b/packages/merged-config/package.json
@@ -9,12 +9,13 @@
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
     "lint": "prettier --check . && eslint --max-warnings=0 *.js src/** test/**",
+    "lint:fix": "eslint --fix *.js src/** && prettier --write .",
     "test": "jest"
   },
   "devDependencies": {
     "@swotel/eslint-config": "workspace:^",
     "@types/jest": "^29.4.1",
-    "@types/node": "^14.0.0",
+    "@types/node": "^16.0.0",
     "eslint": "^8.36.0",
     "jest": "^29.5.0",
     "prettier": "^2.8.4",
