--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "incremental": true,
-    "target": "es2020", // fully supported since Node.js 14 LTS, needed for globalThis
+    "target": "es2021",
     "module": "commonjs",
     "declaration": true,
     "esModuleInterop": true,
