--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -20,10 +20,14 @@
     "@swotel/bindings": "workspace:^"
   },
   "devDependencies": {
+    "@opentelemetry/instrumentation-http": "^0.36.1",
     "@swotel/eslint-config": "workspace:^",
     "@types/node": "^16.0.0",
     "eslint": "^8.36.0",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
+  },
+  "peerDependencies": {
+    "@opentelemetry/instrumentation-http": "^0.36.1"
   }
 }
