--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -7,9 +7,10 @@
     "dist/"
   ],
   "scripts": {
-    "build": "tsc",
-    "lint": "prettier --check . && eslint --max-warnings=0 *.js src/**",
-    "lint:fix": "eslint --fix *.js src/** && prettier --write ."
+    "build": "tsc --project tsconfig.build.json",
+    "lint": "prettier --check . && eslint --max-warnings=0 *.js src/** test/**",
+    "lint:fix": "eslint --fix *.js src/** test/** && prettier --write .",
+    "test": "jest"
   },
   "dependencies": {
     "@opentelemetry/api": "1.4.x",
@@ -22,9 +23,12 @@
   "devDependencies": {
     "@opentelemetry/instrumentation-http": "^0.35.1",
     "@swotel/eslint-config": "workspace:^",
+    "@types/jest": "^29.5.0",
     "@types/node": "^16.0.0",
     "eslint": "^8.37.0",
+    "jest": "^29.5.0",
     "prettier": "^2.8.7",
+    "ts-jest": "^29.0.5",
     "typescript": "^5.0.3"
   },
   "peerDependencies": {
