--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@opentelemetry/api": "1.4.x",
     "@opentelemetry/core": "1.11.x",
+    "@opentelemetry/resources": "1.11.x",
     "@opentelemetry/sdk-node": "0.37.x",
     "@opentelemetry/sdk-trace-base": "1.11.x",
     "@opentelemetry/semantic-conventions": "1.11.x",
