--- a/packages/instrument/package.json
+++ b/packages/instrument/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@swotel/instrument",
   "version": "0.1.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "files": [
-    "index.js"
+    "dist/"
   ],
   "scripts": {
-    "lint": "prettier --check . && eslint --max-warnings=0 *.js"
+    "build": "tsc",
+    "lint": "prettier --check . && eslint --max-warnings=0 *.js src/**",
+    "lint:fix": "eslint --fix *.js src/** && prettier --write ."
   },
   "dependencies": {
     "@opentelemetry/api": "1.4.x",
@@ -14,10 +16,25 @@
     "@swotel/merged-config": "workspace:^",
     "@swotel/sdk": "workspace:^"
   },
+  "peerDependencies": {
+    "json5": ">=1.0.0",
+    "ts-node": ">=9.0.0"
+  },
+  "peerDependenciesMeta": {
+    "json5": {
+      "optional": true
+    },
+    "ts-node": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "@swotel/eslint-config": "workspace:^",
     "@types/node": "^16.0.0",
     "eslint": "^8.37.0",
-    "prettier": "^2.8.7"
+    "json5": "^2.2.3",
+    "prettier": "^2.8.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
