--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^16.0.0",
     "eslint": "^8.37.0",
     "jest": "^29.5.0",
+    "jest-extended": "^3.2.4",
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
