--- a/.github/workflows/images.yml
+++ b/.github/workflows/images.yml
@@ -23,6 +23,11 @@ jobs:
           - 18-debian
           - 18-ubi
           - 18-ubuntu
+          - 20-alpine
+          # - 20-amazonlinux
+          - 20-debian
+          - 20-ubi
+          - 20-ubuntu
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
