--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -81,6 +81,10 @@ jobs:
             18-debian
             18-ubi
             18-ubuntu
+            20-alpine
+            20-debian
+            20-ubi
+            20-ubuntu
           runner-user: github
           runner-directory: /gh
           instance-type: t4g.medium
@@ -108,6 +112,11 @@ jobs:
           - 18-debian
           - 18-ubi
           - 18-ubuntu
+          - 20-alpine
+          # - 20-amazonlinux
+          - 20-debian
+          - 20-ubi
+          - 20-ubuntu
         arch:
           - x64
           - arm64
