gc metrics and some fixes

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "examples",
     "examples/*",
     "packages/*",
-    "packages/bindings/npm/*",
+    "packages/*/npm/*",
     "scripts"
   ],
   "scripts": {
