--- a/packages/bindings/package.json
+++ b/packages/bindings/package.json
@@ -5,8 +5,7 @@
   "types": "index.d.ts",
   "files": [
     "index.js",
-    "index.d.ts",
-    "is-musl.js"
+    "index.d.ts"
   ],
   "scripts": {
     "build": "node build.js",
@@ -23,7 +22,7 @@
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4",
-    "zig-build": "^0.1.1"
+    "zig-build": "^0.2.0"
   },
   "optionalDependencies": {
     "@swotel/bindings-linux-arm64-gnu": "worspace:*",
