--- a/packages/bindings/npm/linux-arm64-musl/package.json
+++ b/packages/bindings/npm/linux-arm64-musl/package.json
@@ -7,9 +7,9 @@
   "cpu": [
     "arm64"
   ],
-  "main": "oboe.node",
   "files": [
     "oboe.node",
+    "metrics.node",
     "liboboe.so"
   ],
   "engines": {
