--- a/examples/distributed-hello/package.json
+++ b/examples/distributed-hello/package.json
@@ -5,9 +5,7 @@
     "start": "concurrently \"node -r @swotel/instrument external.js\" \"node -r @swotel/instrument internal.js\""
   },
   "dependencies": {
-    "@swotel/instrument": "workspace:^",
-    "axios": "^1.4.0",
-    "express": "^4.18.2"
+    "@swotel/instrument": "workspace:^"
   },
   "devDependencies": {
     "concurrently": "^8.0.1"
