--- a/examples/hello/package.json
+++ b/examples/hello/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "@swotel/example-express",
+  "name": "@swotel/example-http",
   "private": true,
   "scripts": {
     "start": "node -r @swotel/instrument index.js"
   },
   "dependencies": {
-    "@swotel/instrument": "workspace:^",
-    "express": "^4.18.2"
+    "@swotel/instrument": "workspace:^"
   }
 }
