export otel metrics through oboe

--- a/packages/instrument/package.json
+++ b/packages/instrument/package.json
@@ -14,8 +14,10 @@
     "@opentelemetry/api": "1.4.x",
     "@opentelemetry/auto-instrumentations-node": "^0.37.0",
     "@opentelemetry/core": "1.13.x",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "0.39.x",
     "@opentelemetry/instrumentation": "0.39.x",
     "@opentelemetry/resources": "1.13.x",
+    "@opentelemetry/sdk-metrics": "1.13.x",
     "@opentelemetry/sdk-trace-base": "1.13.x",
     "@opentelemetry/sdk-trace-node": "1.13.x",
     "@opentelemetry/semantic-conventions": "1.13.x",
