--- a/packages/bindings/package.json
+++ b/packages/bindings/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "node build.js",
     "lint": "prettier --check . && eslint --max-warnings=0 *.js test/** && clang-format src/*.hh src/*/* -n --Werror",
+    "lint:fix": "eslint --fix *.js test/** && prettier --write . && clang-format src/*.hh src/*/* -i --Werror",
     "test": "jest --verbose"
   },
   "devDependencies": {
