--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -18,6 +18,7 @@
     "@opentelemetry/sdk-trace-base": "1.13.x",
     "@opentelemetry/semantic-conventions": "1.13.x",
     "@swotel/bindings": "workspace:^",
+    "@swotel/dependencies": "workspace:^",
     "@swotel/histogram": "workspace:^",
     "@swotel/lazy": "workspace:^"
   },
