--- a/packages/instrument/package.json
+++ b/packages/instrument/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@swotel/instrument",
   "version": "0.1.0",
+  "license": "Apache-2.0",
+  "contributors": [
+    "Raphaël Thériault <raphael.theriault@solarwinds.com>"
+  ],
   "main": "dist/index.js",
   "files": [
     "dist/"
