--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@swotel/scripts",
   "scripts": {
-    "lint": "prettier --check . && eslint --max-warnings=0 *.js"
+    "lint": "prettier --check . && eslint --max-warnings=0 *.js",
+    "lint:fix": "eslint --fix *.js && prettier --write ."
   },
   "dependencies": {
     "axios": "^1.4.0",
