--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "swotel",
   "private": true,
+  "license": "Apache-2.0",
   "packageManager": "yarn@3.5.1",
   "workspaces": [
     "examples",
